--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -318,14 +318,14 @@
   "hierarchyChart": "계층차트",
   "networkReduce": "네트워크-축소",
   "networkMagnify": "네트워크-확대",
-  "dependencyWheel": "의존성 휠",
+  "chordDiagram": "의존성 휠",
   "calendarView": "캘린더 뷰",
   "calendarView2": "캘린더2 뷰",
   "calendarView3": "캘린더3 뷰",
   "arcDiagram": "아크 다이어그램",
   "cartesianCoordinateSystem": "평행 좌표계",
   "starChart": "스타차트",
-  "Treemap": "트리맵",
+  "treemap": "트리맵",
   "bubblePack": "버블팩",
   "compareToPositiveNegative": "긍정/부정 비교",
   "boxPlot": "박스플롯",
@@ -582,5 +582,9 @@
   "dataFieldLimitMsg": "최대 N개의 항목만 올릴 수 있습니다.",
   "startDate": "날짜(시작)",
   "endDate": "날짜 (끝)",
-  "datePlacejolder": "새 날짜"
+  "datePlacejolder": "새 날짜",
+  "relationVisualization": "관계 시각화",
+  "connectionVisualization": "연관 시각화",
+  "distributionVisualization": "분포 시각화",
+  "filter": "필터"
 }
