--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -95,6 +95,7 @@
       "completePickMap": "지도 옵션 선택완료"
     }
   },
+  "Treemap": "트리맵",
   "legned": "범례",
   "notationFormat": "표기형식",
   "contentArray": "콘테츠배열",
