사업부 공유 오류 수정
- 31번 항목 : 필터 라디오 전체 빼고 생성 시 첫 아이템 선택
- 45 번 항목 : 단일 테이블 추가 시 칼럼 논리명으로 추가
- 53 번 항목 : 데이터 그리드 행 너비 조정
- 54 번 항목 : 뷰어 필터 삭제 기능 제거
- 60 번 항목 : y축 및 보조축 기능 오류
- 61 번 항목 : y축 및 보조축 미리보기 오류
- 62 번 항목 : 데이터 그리드 페이징 및 스크롤 기능 오류
- 63 번 항목 : 데이터 집합에서 테이블 미선택 시 알림창 추가
- 69 번 항목 : 새로고침 기능 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -419,6 +419,8 @@
   "dataFieldLimitMsg": "Only up to N items can be raised.",
   "startDate": "Date(Start)",
   "endDate": "Date(End)",
+  "validationTableSelect": "Please select a table.",
+  "dsDeleteMsg": "Do you want to delete datasource?",
   "datePlaceholder": "New Date",
   "relationVisualization": "Relation Visualization",
   "connectionVisualization": "Connection Visualization",
