--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -365,7 +365,7 @@
   "columnHeader": "열 머리글",
   "paging": "페이징 설정",
   "autoWrap": "자동 줄 바꿈",
-  "gridResiging": "그리드 너비 조정",
+  "gridResiging": "그리드 자동 너비",
   "headerAdd": "헤더 추가",
   "inside": "내부",
   "outside": "외부",
@@ -583,6 +583,8 @@
   "dataFieldLimitMsg": "최대 N개의 항목만 올릴 수 있습니다.",
   "startDate": "날짜(시작)",
   "endDate": "날짜 (끝)",
+  "validationTableSelect": "테이블을 선택해주세요.",
+  "dsDeleteMsg": "해당 데이터 원본을 삭제하시겠습니까?",
   "datePlacejolder": "새 날짜",
   "relationVisualization": "관계 시각화",
   "connectionVisualization": "연관 시각화",
