사업부 공유 오류 사항 수정
- 31번 항목
- 68번 항목
- 71번 항목
- 82번 항목

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -606,5 +606,6 @@
   "columnNumber": "컬럼개수",
   "nextStep": "다음",
   "prevStep": "이전",
-  "completeStep": "완료"
+  "completeStep": "완료",
+  "selectAll": "전체 선택"
 }
