--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -425,5 +425,6 @@
   "relationVisualization": "Relation Visualization",
   "connectionVisualization": "Connection Visualization",
   "distributionVisualization": "Distribution Visualization",
-  "Filter": "Filter"
+  "Filter": "Filter",
+  "selectAll": "Select all"
 }
