--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -607,5 +607,6 @@
   "nextStep": "다음",
   "prevStep": "이전",
   "completeStep": "완료",
-  "selectAll": "전체 선택"
+  "selectAll": "전체 선택",
+  "date": "일자 (1개)"
 }
