--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -205,6 +205,7 @@
   "dataSourceName": "데이터 원본 명",
   "dbName": "DB 명",
   "dbType": "DB 유형",
+  "connType": "접속 유형",
   "dbAddress": "서버 주소(명)",
   "userData": "사용자 데이터",
   "datasetName": "데이터 집합 명",
