#feat 워드클라우드
 기본 파일추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -608,5 +608,6 @@
   "nextStep": "다음",
   "prevStep": "이전",
   "completeStep": "완료",
-  "selectAll": "전체 선택"
+  "selectAll": "전체 선택",
+  "wordCloudImg": "워드클라우드"
 }
