#feat collapsible tree
Basic setting

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -343,6 +343,7 @@
   "boxPlot": "박스플롯",
   "NeuralNetworkBar": "신경망 바",
   "liquidFillGauge": "액체 게이지",
+  "collapsibleTree": "신경망 트리",
   "heatmap": "히트맵",
   "sunburst": "선버스트",
   "neuralNetworkTree": "신경망 트리",
