--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -348,6 +348,7 @@
   "neuralNetworkTree": "신경망 트리",
   "radialNeuralNetwork": "방사형신경망",
   "timeline": "타임라인",
+  "heatMap": "히트맵",
   "planeCoordinateLine": "평면좌표라인",
   "planeCoordinatePoint": "평면좌표점",
   "synchronizedLineChart": "동기화라인차트",
