--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -330,6 +330,7 @@
   "hierarchyChart": "계층차트",
   "networkReduce": "네트워크-축소",
   "networkMagnify": "네트워크-확대",
+  "networkChart": "네트워크 차트",
   "chordDiagram": "의존성 휠",
   "calendarView": "캘린더 뷰",
   "calendarView2": "캘린더2 뷰",
