--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -610,5 +610,6 @@
   "prevStep": "이전",
   "completeStep": "완료",
   "selectAll": "전체 선택",
-  "date": "일자"
+  "date": "일자",
+  "deleteHighlight": "선택한 데이터 하이라이트를 삭제 하시겠습니까?"
 }
