fix: 뷰어에서 보고서 2개 이상 안열리게 수정, 달력 요일 일요일 시작하게 수정,

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -426,5 +426,6 @@
   "connectionVisualization": "Connection Visualization",
   "distributionVisualization": "Distribution Visualization",
   "Filter": "Filter",
-  "selectAll": "Select all"
+  "selectAll": "Select all",
+  "duplicatedReportMsg": "The same report is already open."
 }
