--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -610,5 +610,6 @@
   "prevStep": "이전",
   "completeStep": "완료",
   "selectAll": "전체 선택",
-  "date": "일자"
+  "date": "일자",
+  "duplicatedReportMsg": "동일한 보고서가 이미 열려 있습니다."
 }
