--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -428,5 +428,6 @@
   "Filter": "Filter",
   "selectAll": "Select all",
   "highlightDupleCheck": "There are highlights of duplicate conditions. If you want to change the content, please click on the highlight and make the change.",
-  "highlightDupleCheck2": "There are highlights of duplicate conditions."
+  "highlightDupleCheck2": "There are highlights of duplicate conditions.",
+  "deleteHighlight": "Do you want to delete selected data highlights?"
 }
