--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -2,15 +2,16 @@
   "dataColumnSeriesOptions": "시리즈 옵션",
   "alertInfo": {
     "common": {
-      "invalid":"유효하지않습니다."
+      "invalid": "유효하지않습니다."
     },
     "customData": {
-      "empty":"필드명,계산식,타입이 빈값이 있습니다.",
+      "empty": "필드명,계산식,타입이 빈값이 있습니다.",
       "notSelectedRowForUpdating": "업데이트할 로우가 선택되지 않았습니다."
     },
     "customDataCalc": {
-      "empty":"필드명,계산식,타입이 빈값이 있습니다.",
-      "Inspection":"계산식에 올바르지 않습니다."
+      "empty": "필드명,계산식,타입이 빈값이 있습니다.",
+      "errorNamingOfAggregateFunc": "집계함수 명칭을 사용할수 없습니다.",
+      "Inspection": "계산식에 올바르지 않습니다."
     }
   },
   "customData": {
