--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -96,6 +96,7 @@
     }
   },
   "Treemap": "트리맵",
+  "hello": "안녕하세요",
   "legned": "범례",
   "notationFormat": "표기형식",
   "contentArray": "콘테츠배열",
@@ -620,5 +621,6 @@
   "reportNotSelectedMsg":"열려있는 보고서가 없습니다.",
   "logout": "로그아웃",
   "mypage": "마이페이지",
-  "confirmLogoutMsg": "로그아웃 하시겠습니까?"
+  "confirmLogoutMsg": "로그아웃 하시겠습니까?",
+  "failedLogout": "로그아웃에 실패했습니다. 관리자에게 문의해 주세요."
 }
