--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -454,6 +454,11 @@
     {"name": "ceil", "caption": "올림"},
     {"name": "floor", "caption": "버림"}
   ],
+  "initPages": [
+    {"name": "Adhoc", "caption": "비정형 보고서"},
+    {"name": "DashAny", "caption": "대시보드"},
+    {"name": "Spread", "caption": "스프레드"}
+  ],
   "labelDataEdit": "라벨 데이터 편집",
   "showTitle": "제목 보기",
   "formatType": "표기 형식",
