fix: 피벗그리드 보고서 설명 context menu 추가, 일부 사용하지 않는 java 파일 또는 구문 삭제

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -455,5 +455,6 @@
     {"id": "chart", "text": "Only chart"},
     {"id": "pivot", "text": "Only PivotGrid"},
     {"id": "chart_pivot", "text": "Show both"}
-  ]
+  ],
+  "reportDescription": "Report Description"
 }
