hotfix: en.jon , ko.json 충돌 수정

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -456,6 +456,6 @@
     {"id": "pivot", "text": "Only PivotGrid"},
     {"id": "chart_pivot", "text": "Show both"}
   ],
-  "editReportName": "Edit ReportName"
+  "editReportName": "Edit ReportName",
   "reportDescription": "Report Description"
 }
