--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -352,6 +352,8 @@
   "collapsibleTree": "신경망 트리",
   "heatmap": "히트맵",
   "sunburst": "선버스트",
+  "zoomableCicle": "계층형 네모차트",
+  "ciclePacking": "버블팩",
   "neuralNetworkTree": "신경망 트리",
   "radialNeuralNetwork": "방사형신경망",
   "timeline": "타임라인",
