feat/myPage_util

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -449,5 +449,7 @@
   "logout": "logout",
   "mypage": "my page",
   "confirmLogoutMsg": "Do you want to log out?",
-  "failedLogout": "Logout failed. Please contact the administrator."
+  "failedLogout": "Logout failed. Please contact the administrator.",
+  "folder": "Folder",
+  "report": "Report"
 }
