#feat 폭포수차트
폭포수차트

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -352,6 +352,7 @@
   "collapsibleTree": "신경망 트리",
   "heatmap": "히트맵",
   "sunburst": "선버스트",
+  "waterFall": "폭포수",
   "zoomableCicle": "계층형 네모차트",
   "ciclePacking": "버블팩",
   "neuralNetworkTree": "신경망 트리",
