#feat 스케줄 아이템 추가
스케줄 아이템 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -368,6 +368,7 @@
   "treeView": "트리보기",
   "image": "이미지",
   "textBox": "텍스트 상자",
+  "scheduler": "스케줄러",
   "choropleth": "코로플레스",
   "card": "카드",
   "rectangleArea": "네모영역",
