feat: 하이퍼링크 기능 추가, fix: 서브연결보고서 리팩토링

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -489,5 +489,12 @@
   "emptyNameAlert": "Please write your name.",
   "nameDupleAlert": "The name is duplicated. Please write again.",
   "noSelectionAlert": "Nothing has been selected. Please select again.",
-  "search": "Search"
+  "search": "Search",
+  "hyperlink": "Hyperlink",
+  "hyperlinkSetting": "Hyperlink Setting",
+  "hyperlinkInformation": "Hyperlink information",
+  "hyperlinkList": "Hyperlink list",
+  "name": "Name",
+  "new": "New",
+  "save": "Save"
 }
