feat: 쿼리 직접 입력 필드 설명 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -496,5 +496,6 @@
   "hyperlinkList": "Hyperlink list",
   "name": "Name",
   "new": "New",
-  "save": "Save"
+  "save": "Save",
+  "addFieldDescription": "Add Field Description"
 }
