불필요 파일, 코드 제거 및 locaizedString 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -473,5 +473,7 @@
   "emptyNameAlert": "Please write your name.",
   "nameDupleAlert": "The name is duplicated. Please write again.",
   "noSelectionAlert": "Nothing has been selected. Please select again.",
-  "search": "Search"
+  "search": "Search",
+  "apply": "apply",
+  "myPageAdHocLayoutHint": "When you check Apply, My Page's irregular layout settings are applied."
 }
