--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -499,5 +499,11 @@
   "name": "Name",
   "new": "New",
   "save": "Save",
-  "addFieldDescription": "Add Field Description"
+  "addFieldDescription": "Add Field Description",
+  "selectReportAlert": "Please select a report.",
+  "saveFail": "Save failed.",
+  "resetAllConfirmMsg": "All settings will be reset. Do you want to proceed?",
+  "resetSuccess": "Initialization was successful.",
+  "resetFail": "Initialization failed.",
+  "favorit": "Favorites"
 }
