--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -353,7 +353,7 @@
   "heatmap": "히트맵",
   "sunburst": "선버스트",
   "waterFall": "폭포수",
-  "zoomableCicle": "계층형 네모차트",
+  "zoomableIcicle": "계층형 네모차트",
   "ciclePacking": "버블팩",
   "neuralNetworkTree": "신경망 트리",
   "radialNeuralNetwork": "방사형신경망",
