feat: 보고서 요청자 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -497,5 +497,6 @@
   "name": "Name",
   "new": "New",
   "save": "Save",
-  "addFieldDescription": "Add Field Description"
+  "addFieldDescription": "Add Field Description",
+  "requester": "Requester"
 }
