--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -701,5 +701,6 @@
   "name": "이름",
   "new": "새로 만들기",
   "save": "저장",
-  "addFieldDescription": "필드 설명 추가"
+  "addFieldDescription": "필드 설명 추가",
+  "requester": "요청자"
 }
