--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -97,6 +97,19 @@
       "completePickMap": "지도 옵션 선택완료"
     }
   },
+  "config": {
+    "general": {
+      "licensesKey": "OLAP 라이선스 키",
+      "spreadJsLicense": "SpreadJS 라이센스 키",
+      "spreadJsDesignLicense": "SpreadJS 디자이너 키",
+      "kakaoMapApiKey": "카카오 지도 API 키",
+      "mainTitle": "제목",
+      "webUrl": "URL",
+      "loginImage": "로그인 이미지",
+      "logo": "아이콘 이미지",
+      "wiDefaultPage": "초기화면"
+    }
+  },
   "Treemap": "트리맵",
   "hello": "안녕하세요",
   "legned": "범례",
