feat: 각종 로그 insert 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -530,7 +530,7 @@
     "query": "Query",
     "reportId": "Report ID",
     "reportNm": "Report Name",
-    "stratTime": "Start Time",
+    "startTime": "Start Time",
     "endTime": "End Time",
     "ctrlId": "Control ID",
     "ctrnCaption": "Control Name"
