--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -734,7 +734,7 @@
     "query": "수행 쿼리",
     "reportId":"보고서 ID",
     "reportNm": "보고서 명",
-    "stratTime": "시작 시간",
+    "startTime": "시작 시간",
     "endTime": "종료 시간",
     "ctrlId": "컨트롤 ID",
     "ctrlCaption": "컨트롤 명"
