feat/hns_dataItem_Display_OR_not_ToViewer
커스터마이징 개발.

1. 디자이너에서 데이터 항목 중 뷰어에서 안 보이게 하고 싶은 목록을 선택.

2. 보고서 작성 후 조회 -> 저장.

3. 뷰어에서 선택한 데이터 항목이 보이지 않게 개발.

---
추가로 현재 디자이너에서 죄회 클릭 -> 조회된 상태에서 데이터항목에 추가. -> 조회 없이 저장이 가능.

이 현상으로 뷰어게시 기능에 오류가 발생할 가능성이 있다고 판단하여, 데이터 항목 변경 시 조회를 누르지 않으면 저장을 못하게 변경.

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -716,5 +716,9 @@
     "count": "Top/Bottom 개수",
     "percentage": "% 적용",
     "others": "Top/Bottom 값 이외의 항목 기타로 표시"
-  }
+  },
+  "saveValidationNonExecute": "내용이 변경 되었거나, 조회를 하지 않았습니다. 조회를 한 후 저장해 주세요.",
+  "showInViewerDataItems": "뷰어 데이터 항목 표시",
+  "uniqueName": "고유 명",
+  "types": "타입"
 }
