--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -512,5 +512,9 @@
     "count": "Top/Bottom Count",
     "percentage": "Apply %",
     "others": "Display other items besides Top/Bottom values as 'Others'"
-  }
+  },
+  "saveValidationNonExecute": "The content has changed or has not been viewed. Please save after viewing.",
+  "showInViewerDataItems": "Show viewer data items",
+  "uniqueName": "Unique Name",
+  "types": "Type"
 }
