--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -516,5 +516,7 @@
   "saveValidationNonExecute": "The content has changed or has not been viewed. Please save after viewing.",
   "showInViewerDataItems": "Show viewer data items",
   "uniqueName": "Unique Name",
-  "types": "Type"
+  "types": "Type",
+  "viewerPosting": "Viewer data item selection display function.",
+  "selectDataset": "Please select a data set."
 }
