--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -720,5 +720,7 @@
   "saveValidationNonExecute": "내용이 변경 되었거나, 조회를 하지 않았습니다. 조회를 한 후 저장해 주세요.",
   "showInViewerDataItems": "뷰어 데이터 항목 표시",
   "uniqueName": "고유 명",
-  "types": "타입"
+  "types": "타입",
+  "viewerPosting": "뷰어 데이터 항목 선택 표시 기능",
+  "selectDataset": "데이터 집합을 선택해 주세요."
 }
