Sankey RangeBar 아이템 추가

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -337,6 +337,7 @@
   "networkMagnify": "네트워크-확대",
   "networkChart": "네트워크 차트",
   "chordDiagram": "의존성 휠",
+  "sankey": "센키차트",
   "calendarView": "캘린더 뷰",
   "calendarView2": "캘린더2 뷰",
   "calendarView3": "캘린더3 뷰",
