--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -210,6 +210,7 @@
   "networkReduce": "Network-Reduce",
   "networkMagnify": "Network-Magnify",
   "chordDiagram": "Chord Diagram",
+  "sankey": "Sankey Chart",
   "calendarView": "Calendar View",
   "calendarView2": "Calendar2 View",
   "calendarView3": "Calendar3 View",
