--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -512,5 +512,7 @@
     "count": "Top/Bottom Count",
     "percentage": "Apply %",
     "others": "Display other items besides Top/Bottom values as 'Others'"
-  }
+  },
+  "range": "range",
+  "rangeBarlengthAlert": "For rangeBar items, the number of measurements in range 1 and range 2 must be the same."
 }
