--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -543,5 +543,27 @@
     "others": "Display other items besides Top/Bottom values as 'Others'"
   },
   "range": "range",
-  "rangeBarlengthAlert": "For rangeBar items, the number of measurements in range 1 and range 2 must be the same."
+  "rangeBarlengthAlert": "For rangeBar items, the number of measurements in range 1 and range 2 must be the same.",
+  "myPage": "My Page",
+  "requiredUserNm": "User name is required.",
+  "userNmNoEmpty": "The username cannot be empty.",
+  "userInfoUpdateSuccess": "Your changes have been saved.",
+  "saveExceptionMsg": "Failed to save. Please contact the administrator.",
+  "updateException": "Change failed. Please contact the administrator.",
+  "personalInfo": "Privacy",
+  "invalideEmailRule": "This is not an email format.",
+  "email": "E-mail",
+  "telNo": "Tel.No",
+  "cellPhoneNo": "Phone number",
+  "confirmModifyPw": "Would you like to change your password?",
+  "ExceptionCheckCurrPw": "Failed to retrieve current password. Please contact the administrator.",
+  "ExceptionUpdate": "Password change failed, contact your administrator.",
+  "FailUpdatePw": "Password change failed.",
+  "wrongCurrentPw": "Current password does not match.",
+  "allRequired": "All fields are required. Please enter everything.",
+  "notMatchPw": "The password you entered and the password confirmation are different.",
+  "lengthValidation": "It does not meet the length limit (6 to 15 characters).",
+  "pwInconsistency": "Passwords do not match.",
+  "required": "Required input.",
+  "confirmResetMsg": "Do you want to reset?"
 }
