#feat 홈앤쇼핑 머지 컬럼, 로우 해체 개발

--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -273,6 +273,7 @@
   "MSOffice": "MSOffice",
   "hancom": "Hancom",
   "excelXlsx": "EXCEL(.xlsx)",
+  "excelMergeXlsx": "EXCEL-MG(.xlsx)",
   "excelXls": "EXCEL(.xls)",
   "word": "WORD(.doc)",
   "powerpoint": "POWERPOINT(.ppt)",
