feat/MyPage_ViewerAndReportConfig
1. 마이페이지 디자이너 설정 > 기본 보고서 설정 개발.
-> 구소스와 마찬가지로 보고서를 불러오고, 새로고침, 메뉴 이동 후 다시 돌아온 경우에도 적용.

2. 마이페이지 디자이너 설정 > 기본 색상 개발.
 -> 비정형 차트는 팔레트가 개발이 안된듯 하여 대시보드만 적용.

3. 마이페이지 디자이너 각 항목 개별 초기화 개발.
-> state 초기화만 진행 하고 적용은 저장을 눌러야함.

4. 기타 불필요 코드 제거

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -543,5 +543,10 @@
     "others": "Display other items besides Top/Bottom values as 'Others'"
   },
   "range": "range",
-  "rangeBarlengthAlert": "For rangeBar items, the number of measurements in range 1 and range 2 must be the same."
+  "rangeBarlengthAlert": "For rangeBar items, the number of measurements in range 1 and range 2 must be the same.",
+  "eachItemResetConfirm": {
+    "defaultReportId": "Do you want to reset the default report?",
+    "defaultItem": "Do you want to reset default items?",
+    "defaultPalette": "Do you want to reset default colors?"
+  }
 }
