--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -572,5 +572,6 @@
   "required": "Required input.",
   "confirmResetMsg": "Do you want to reset?",
   "folderManager": "Folder Management",
-  "noSelectionFolderAlert": "Please select a folder and proceed."
+  "noSelectionFolderAlert": "Please select a folder and proceed.",
+  "linkReportCorrupted": "Failed to retrieve connection report."
 }
