refactor/Mypage_reportManagement_Label
마이페이지 보고설 설정 중 보고서 정보의 Label이 영어로 되어있어 한글로 변경(localizedString).

유효성 검사 미흡으로 추가.

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -567,5 +567,8 @@
   "required": "Required input.",
   "confirmResetMsg": "Do you want to reset?",
   "folderManager": "Folder Management",
-  "noSelectionFolderAlert": "Please select a folder and proceed."
+  "noSelectionFolderAlert": "Please select a folder and proceed.",
+  "loadData": "Load data",
+  "reportInfoChangeSuccess":"Saving report information was successful."
+
 }
