localizedString 추가 및 유효성 검사 추가

--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -569,6 +569,8 @@
   "folderManager": "Folder Management",
   "noSelectionFolderAlert": "Please select a folder and proceed.",
   "loadData": "Load data",
-  "reportInfoChangeSuccess":"Saving report information was successful."
+  "reportInfoChangeSuccess":"Saving report information was successful.",
+  "failReportDelete": "Report deletion failed.",
+  "successReportDelete": "Report deletion was successful."
 
 }
