--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -794,5 +794,7 @@
   "noSelectionFolderAlert": "폴더를 선택후 진행해 주세요.",
   "loginErrorBySession": "'세션의 의해 로그인이 시도되었으나 서버에 문제가 발생하였습니다.'",
   "loadData": "데이터 불러오기",
-  "reportInfoChangeSuccess":"보고서 정보 저장에 성공 했습니다."
+  "reportInfoChangeSuccess":"보고서 정보 저장에 성공 했습니다.",
+  "failReportDelete": "보고서 삭제에 실패 했습니다.",
+  "successReportDelete": "보고서 삭제에 성공 했습니다."
 }
