--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -703,7 +703,7 @@
   "variationValueList": "변동 측정값 목록",
   "variationValueInfo": "변동 측정값 정보",
   "changeReportNmConfirm": "보고서 내용을 변경 하시겠습니까?",
-  "reportDeleteConfirm": "보고서를 삭제 하시겠니까?",
+  "reportDeleteConfirm": "보고서를 삭제 하시겠습니까?",
   "selectReportAndDeleteConfirm": "보고서를 선택 후 삭제 버튼을 눌러주세요.",
   "noReports": "조회된 보고서가 없습니다.",
   "changeFolderNm": "폴더 이름 변경",
