--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -573,5 +573,6 @@
   "confirmResetMsg": "Do you want to reset?",
   "folderManager": "Folder Management",
   "noSelectionFolderAlert": "Please select a folder and proceed.",
-  "linkReportCorrupted": "Failed to retrieve connection report."
+  "linkReportCorrupted": "Failed to retrieve connection report.",
+  "defaultReport": "기본 보고서"
 }
