--- a/src/main/view/src/config/localization/language/en.json
+++ b/src/main/view/src/config/localization/language/en.json
@@ -574,7 +574,7 @@
   "folderManager": "Folder Management",
   "noSelectionFolderAlert": "Please select a folder and proceed.",
   "linkReportCorrupted": "Failed to retrieve connection report.",
-  "defaultReport": "기본 보고서",
+  "defaultReport": "Default Report",
   "loadData": "Load data",
   "reportInfoChangeSuccess":"Saving report information was successful.",
   "failReportDelete": "Report deletion failed.",
