--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -792,5 +792,6 @@
   "confirmResetMsg": "초기화 하시겠습니까?",
   "folderManager": "폴더 관리",
   "noSelectionFolderAlert": "폴더를 선택후 진행해 주세요.",
-  "loginErrorBySession": "'세션의 의해 로그인이 시도되었으나 서버에 문제가 발생하였습니다.'"
+  "loginErrorBySession": "'세션의 의해 로그인이 시도되었으나 서버에 문제가 발생하였습니다.'",
+  "removeFail": "삭제에 실패 했습니다."
 }
