--- a/src/main/view/src/config/localization/language/ko.json
+++ b/src/main/view/src/config/localization/language/ko.json
@@ -111,7 +111,107 @@
       "wiDefaultPage": "초기화면"
     },
     "report": {
-      "adHocLayout": "비정형 레이아웃"
+      "adHocLayout": "초기 레이아웃",
+      "instantReportRetrieval": "보고서 바로 조회",
+      "chartDefaultColor": "기본 파레트",
+      "reportLayoutSetting": "보고서 레이아웃",
+      "print": "프린트",
+      "sheet": "시트",
+      "table": "테이블",
+      "initPalette": [
+        {"name": "brightness", "caption": "밝음"},
+        {"name": "luminary", "caption": "발광체"},
+        {"name": "sea", "caption": "바다"},
+        {"name": "pastel", "caption": "파스텔"},
+        {"name": "softness", "caption": "부드러움"},
+        {"name": "lightPastel", "caption": "연한 파스텔"},
+        {"name": "tree", "caption": "나무"},
+        {"name": "grape", "caption": "포도"},
+        {"name": "monochrome", "caption": "단색"},
+        {"name": "universe", "caption": "우주"},
+        {"name": "deepPurple", "caption": "진보라"},
+        {"name": "mistyForest", "caption": "안개숲"},
+        {"name": "lightBlue", "caption": "연파랑"},
+        {"name": "default", "caption": "기본값"},
+        {"name": "officeTheme", "caption": "사무실 테마"},
+        {"name": "sunset", "caption": "노을"}
+      ]
+    },
+    "menu": {
+      "adhoc": "비정형 보고서",
+      "dashboard": "대시보드",
+      "spreadSheet": "스프레드시트",
+      "dataset": "데이터 집합",
+      "config": "환경설정",
+      "datasetViewer": "데이터 집합 뷰어",
+      "menuAuth": "메뉴 권한 사용",
+      "lookQuery": "쿼리보기",
+      "cubeData": "주제 영역 데이터",
+      "newDataSetFocusCube": "신규 데이터 집합(주제 영역 기준)",
+      "newDataSetFocusDs": "신규 데이터 집합(데이터 원본 기준)",
+      "newDataSetFocusCrossDomainJoin": "신규 데이터 집합(이기종 조인)",
+      "newDataSetFocusQuery": "신규 데이터 집합(쿼리 직접 입력)",
+      "newDataSetFocusSingleTable": "신규 데이터 집합(단일 테이블)",
+      "userDataUpload": "사용자 데이터 업로드",
+      "originalDataset": "기존 데이터 집합",
+      "xlsx": "xlsx",
+      "FolderGroup": "폴더 그룹화"
+    },
+    "advanced": {
+      "searchTimeOut": "검색 제한 시간(초)",
+      "searchLimitSize": "검색 제한 크기(Row)",
+      "concurrentTaskLimit": "동시 작업 제한 수",
+      "serverExcelDownloadProcessingCount": "엑셀 다운로드 서버 처리 건수",
+      "unusedExpirationDate": "미사용 제한 일자",
+      "concurrentConnectionLimit": "동시접속 제한 수",
+      "passwordChangePeriod": "비밀번호 변경 주기",
+      "accountLockoutOnLoginFailure": "로그인 실패시 잠김",
+      "mainLayout": "초기 레이아웃",
+      "reportAuth": "보고서 ",
+      "nullValue": "Null 값 표기",
+      "dashboardDataField": "대시보드 데이터 항목",
+      "viewerUrlWithReport": "뷰어(URL, 연결보고서 포함) 다운로드 레이아웃 활성화",
+      "viewerAutoDisplayConfig": "뷰어(URL, 연결보고서 포함) 데이터 항목 자동 노출 활성화",
+      "designerShortcutEnabled": "디자이너 바로가기 활성화",
+      "queryErrorLogVisible": "쿼리 에러 로그 공개",
+      "queryCacheEnabled": "쿼리 캐시기능 사용",
+      "initReportAuth": [
+        {"name": "folderAuth", "caption": "폴더별 권한"}
+      ],
+      "initLayout": [
+        {"name": "barChart", "caption": "막대차트"},
+        {"name": "lineChart", "caption": "선 차트"},
+        {"name": "areaChart", "caption": "영역 차트"},
+        {"name": "bubbleChart", "caption": "버블 차트"},
+        {"name": "pivotGrid", "caption": "피벗 그리드"},
+        {"name": "grid", "caption": "일반 그리드"},
+        {"name": "pieChart", "caption": "파이 차트"},
+        {"name": "scatter", "caption": "산점도"},
+        {"name": "wordcloud", "caption": "워드클라우드"},
+        {"name": "waterFall", "caption": "폭포수"},
+        {"name": "sankeyChart", "caption": "센키차트"},
+        {"name": "dependencyWheel", "caption": "의존성 휠"},
+        {"name": "calender", "caption": "달력"},
+        {"name": "ardDiagram", "caption": "아크 다이어그램"},
+        {"name": "hierarchyRectangleChart", "caption": "계층형 네모차트"},
+        {"name": "heatMap", "caption": "히트맵"},
+        {"name": "boxPlot", "caption": "박스플롯"},
+        {"name": "liquidGauge", "caption": "액체게이지"},
+        {"name": "treeMap", "caption": "트리맵"},
+        {"name": "coordinateDot", "caption": "평면좌표 점"},
+        {"name": "coordinateLine", "caption": "평면좌표 라인"},
+        {"name": "radialBasisFunctionNeuralNetwork", "caption": "방상형 신경망"},
+        {"name": "sunburst", "caption": "선버스트"},
+        {"name": "bublepack", "caption": "버블팩"},
+        {"name": "funnelChart", "caption": "깔떼기 차트"},
+        {"name": "comboBox", "caption": "콤보 박스"},
+        {"name": "listBox", "caption": "리스트 박스"},
+        {"name": "startChart", "caption": "스타 차트"},
+        {"name": "card", "caption": "카드"},
+        {"name": "choropleth", "caption": "코로플레스"},
+        {"name": "textBox", "caption": "텍스트 상자"},
+        {"name": "schedule", "caption": "스케줄러"}
+      ]
     }
   },
   "Treemap": "트리맵",
@@ -456,6 +556,8 @@
   "bar": "바",
   "generateConfigure": "일반 설정",
   "reportConfigure": "보고서 설정",
+  "advancedConfigure": "고급 설정",
+  "menuConfigure": "메뉴 설정",
   "userManagement": "사용자 관리",
   "groupManagement": "그룹 관리",
   "password": "비밀번호",
